# sl

./: .gitattributes  .gitignore  .prettierrc.js  .prettierrc.mjs  CMakeLists.txt  Cargo.toml  README.ja.md  README.md  build.rs  config.h.in  eslint.config.mjs  lage.config.js  package.json  scandir.c  scandir.h  sl.1  sl.1.ja  sl.c  sl.cpp  sl.h  sl.nsi  sl.spec  tsconfig.json  turbo.json  vcpkg.json  win-build.ps1
.cargo/: config.toml
.devcontainer/: README.md  devcontainer.json  onCreateCommand.sh
.devcontainer/fedora/: devcontainer.json  onCreateCommand.sh
.devcontainer/ubuntu/: devcontainer.json  onCreateCommand.sh
.github/: copilot-instructions.md
.github/agents/: docs-expert.agent.md  rust-expert.agent.md  web-expert.agent.md
.github/workflows/: build.yml  fedora-build.yml  posix-build.yml  site.yml  ubuntu-build.yml  win-build.yml
apps/page/: build.ts  dev.js  dev.ts  embed.html  index.html  manifest.json  package.json  playwright-server.mjs  playwright.config.mjs  rollup.config.js  rollup.config.ts  take-screenshots.mjs  tsconfig.json
apps/page/playwright/: offline.e2e.js
apps/page/src/: embed.tsx  index.jsx  index.tsx  service-worker-build.test.ts  service-worker-navigation.test.ts  service-worker-navigation.ts  service-worker.test.ts  service-worker.ts  types.ts  websl.ts
apps/page/src/components/: App.jsx  App.tsx  EmbedTerminal.tsx  LinuxWindowChrome.jsx  MacWindowChrome.jsx  WindowsWindowChrome.jsx  slTerminal.jsx  slTerminal.tsx  terminal.jsx  terminal.test.ts  terminal.tsx
apps/page/src/components/embed/: EmbedPage.jsx  EmbedPage.tsx
apps/page/src/components/home/: Embed.tsx  Form.jsx  Form.tsx  Home.jsx  Home.tsx  Installation.jsx  Installation.tsx  Piping.tsx  Usage.tsx
apps/sl/: AGENTS.md  Cargo.toml
apps/sl/src/: cli.rs  main.rs
completions/: _sl  _sl.ps1  sl.1  sl.bash  sl.elv  sl.fish
libraries/libsl/: Cargo.toml
libraries/libsl/src/: add_man.rs  add_smoke.rs  add_train.rs  c51.rs  d51.rs  lib.rs  logo.rs  mvaddstr.rs  print_car.rs  unicode_width.rs
libraries/libsl/src/unicode_width/: no_std_width.rs  std_width.rs
libraries/websl/: Cargo.toml  index.js  package.json  tsconfig.json
libraries/websl/src/: lib.rs
libsl/: CMakeLists.txt  Cargo.toml  build.zig  build.zig.zon  sl.c  sl.h  vcpkg.json
libsl/src/: add_man.rs  add_man.zig  add_smoke.rs  add_smoke.zig  add_train.rs  add_train.zig  c51.rs  c51.zig  d51.rs  d51.zig  format_car.zig  lib.rs  logo.rs  logo.zig  mvaddstr.rs  print_car.rs  shared.zig  sl.zig
scripts/: ensure-wasm-pack.ts  zig-cc-aarch64-unknown-linux-gnu.sh  zig-cc-linker.sh  zig-cc-x86_64-unknown-linux-gnu.sh
sl/: Cargo.toml
sl/src/: cli.rs  main.rs
src/: cli.rs  curses.rs  freopen.rs  freopen_unix.rs  freopen_windows.rs  main.rs  sl.rs  unicode_width.rs
src/sl/: add_man.rs  add_smoke.rs  add_train.rs  d51.rs  mvaddstr.rs  print_car.rs  unicode_width.rs
wasmsl/: Cargo.toml  index.html  index.js
wasmsl/src/: lib.rs
win32/: scandir.cpp
