cmake_minimum_required(VERSION 3.28)
project("SL"
        VERSION 6.0
        DESCRIPTION "CHOO CHOO"
        LANGUAGES C)

if(DEFINED ENV{VCPKG_INSTALLATION_ROOT})
        set(VCPKG_ROOT "$ENV{VCPKG_INSTALLATION_ROOT}")
else()
        set(VCPKG_ROOT "${PROJECT_BINARY_DIR}/../vcpkg")
endif()

if ("${ARCH}" STREQUAL "aarch64")
find_program(CURSES_DLL NAMES pdcurses.dll REQUIRED PATHS "${VCPKG_ROOT}/packages/pdcurses_arm64-windows/bin")
else()
find_program(CURSES_DLL NAMES pdcurses.dll REQUIRED PATHS "${VCPKG_ROOT}/packages/pdcurses_x64-windows/bin")
endif()
find_program(SL_EXE NAMES sl.exe PATHS "${PROJECT_BINARY_DIR}/release" REQUIRED)
install(FILES ${CURSES_DLL} ${SL_EXE} DESTINATION bin COMPONENT applications)

set(CPACK_PACKAGE_NAME "sl")
set(CPACK_PACKAGE_VENDOR "sl")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "SL (Steam Locomotive)")
set(CPACK_PACKAGE_VERSION "6.0.0")
set(CPACK_PACKAGE_VERSION_MAJOR "6")
set(CPACK_PACKAGE_VERSION_MINOR "0")
set(CPACK_PACKAGE_VERSION_PATCH "0")
set(CPACK_PACKAGE_INSTALL_DIRECTORY "sl")
set(CPACK_COMPONENTS_ALL applications)
set(CPACK_COMPONENT_APPLICATIONS_DISPLAY_NAME "sl")
set(CPACK_COMPONENT_APPLICATIONS_DESCRIPTION "SL (Steam Locomotive) runs across your terminal")
set(CPACK_COMPONENT_APPLICATIONS_GROUP "Runtime")
set(CPACK_ALL_INSTALL_TYPES Full)
set(CPACK_COMPONENT_APPLICATIONS_INSTALL_TYPES Full)
set(CPACK_NSIS_MODIFY_PATH ON)
set(CPACK_NSIS_ENABLE_UNINSTALL_BEFORE_INSTALL ON)
set(CPACK_NSIS_URL_INFO_ABOUT "https://github.com/scaryrawr/sl")
set(CPACK_NSIS_HELP_LINK "https://github.com/scaryrawr/sl/issues")
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE")
set(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/README.md")
set(CPACK_PACKAGE_HOMEPAGE_URL "https://github.com/scaryrawr/sl")

include(CPack)