[package]
name = "sl"
version = "6.0.0"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
crossterm = "0.28.1"
libc = "0.2.168"
widestring = "1.1.0"

[build-dependencies]
cmake = "0.1.52"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_SystemServices",
    "Win32_System",
]
