[package]
name = "sl"
version = "6.0.0"
edition = "2021"
build = "build.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["libc", "use-dev-tty"] }
libc = "0.2.168"
unicode-width = "0.2.0"
widestring = "1.1.0"

[build-dependencies]
clap = { version = "4.5.23", features = ["derive"] }
clap_complete = "4.5.38"
cmake = "0.1.52"
