[package]
name = "sl"
version = "6.1.3"
edition = "2021"
build = "build.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["libc", "use-dev-tty"] }
filedescriptor = "0.8.2"
unicode-display-width = "0.3.0"
unicode-segmentation = "1.12.0"

[build-dependencies]
clap = { version = "4.5.23", features = ["derive"] }
clap_complete = "4.5.40"
clap_mangen = "0.2.24"
