[package]
name = "wasmsl"
version = "0.1.0"
edition = "2021"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
libsl = { version = "0.1.0", path = "../libsl" }
wasm-bindgen = "0.2.99"

[dev-dependencies]
wasm-bindgen-test = "0.3.49"
