[package]
name = "wasmsl"
version = "0.1.0"
edition = "2021"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.76"
libsl = { version = "0.1.0", path = "../libsl" }
wasm-bindgen = "0.2.99"
web-sys = { version = "0.3.76", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.49"
